--- a/src/App.less
+++ b/src/App.less
@@ -1,18 +1,19 @@
-.App {
-  text-align: center;
-}
+@import url('./variables.less');
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+.app-container {
+    box-sizing: border-box;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    position: relative;
+    padding-top: @navbar-height;
 
-.App-link {
-  color: #61dafb;
+    .navbar {
+        width: 100%;
+        height: @navbar-height;
+        position: absolute;
+        top: 0;
+        background-color: @bg-widget-color;
+        border-bottom: 1px solid @bg-divider-color;
+    }
 }
