--- a/src/App.less
+++ b/src/App.less
@@ -14,7 +14,6 @@
         align-items: center;
         width: 100%;
         height: @navbar-height;
-        padding: 0 @padding-horizontal-width;
         position: absolute;
         top: 0;
         background-color: @bg-widget-color;
@@ -24,6 +23,13 @@
             width: 36px;
             height: 36px;
             border-radius: 6px;
+        }
+
+        .wrapper {
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+            padding: 0 @padding-horizontal-width;
         }
     }
 }
