--- a/src/App.less
+++ b/src/App.less
@@ -31,8 +31,12 @@
             align-items: center;
             padding: 0 calc(@padding-horizontal-width / 2);
 
-            & > * {
+            &.avatar-and-locales > * {
                 margin: 0 calc(@padding-horizontal-width / 2);
+            }
+
+            &.logo-and-nav > * {
+                margin: 0 @padding-horizontal-width;
             }
         }
     }
