feat: 🎸 navbar links

--- a/src/App.less
+++ b/src/App.less
@@ -38,6 +38,21 @@
             &.logo-and-nav > * {
                 margin: 0 @padding-horizontal-width;
             }
+
+            .navlink {
+                text-decoration: none;
+
+                .link {
+                    font-size: 14px;
+                    color: #333;
+                    text-decoration: none;
+                    background-color: transparent;
+
+                    &:hover {
+                        color: @text-hover-color;
+                    }
+                }
+            }
         }
     }
 }
