--- a/src/modules/clients/clients-dropdown.component.less
+++ b/src/modules/clients/clients-dropdown.component.less
@@ -1,6 +1,13 @@
+@import url(../../variables.less);
+
 .clients-dropdown {
     background-color: transparent;
     font-size: 14px;
     color: #333;
     text-decoration: none;
+
+    &:hover {
+        background-color: transparent;
+        color: @text-hover-color;
+    }
 }
