feat: 🎸 optimize nav links

--- a/src/App.less
+++ b/src/App.less
@@ -41,16 +41,16 @@
 
             .navlink {
                 text-decoration: none;
+            }
 
-                .link {
-                    font-size: 14px;
-                    color: #333;
-                    text-decoration: none;
-                    background-color: transparent;
+            .link {
+                font-size: 14px;
+                color: @text-nav-link-color;
+                text-decoration: none;
+                background-color: transparent;
 
-                    &:hover {
-                        color: @text-hover-color;
-                    }
+                &:hover {
+                    color: @text-nav-link-hover-color;
                 }
             }
         }
