--- a/src/variables.less
+++ b/src/variables.less
@@ -5,4 +5,5 @@
 // colors
 @bg-divider-color: #e6e6e6;
 @bg-widget-color: #f9f9f9;
-@text-hover-color: #000;
+@text-nav-link-color: #6b6b6b;
+@text-nav-link-hover-color: #212121;
