--- a/src/modules/clients/client-dashboard.component.less
+++ b/src/modules/clients/client-dashboard.component.less
@@ -7,12 +7,44 @@
     align-items: stretch;
 
     .sidebar {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: stretch;
         flex-shrink: 1;
         flex-grow: 0;
         box-sizing: border-box;
-        padding: @padding-vertical-width @padding-horizontal-width;
+        padding: calc(@padding-vertical-width * 2) @padding-horizontal-width;
+        padding-bottom: 0;
         background-color: @bg-widget-color;
         border-right: 1px solid @bg-divider-color;
+
+        .menu-container {
+            box-sizing: border-box;
+            display: flex;
+            flex-direction: column;
+            flex-shrink: 1;
+            flex-grow: 1;
+            overflow-y: scroll;
+
+            .sidebar-link {
+                display: block;
+                text-decoration: none;
+                user-select: none;
+            }
+        }
+
+        .expand-collapse-container {
+            box-sizing: border-box;
+            padding: @padding-vertical-width @padding-horizontal-width;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            .pugio-icons {
+                color: @text-nav-link-color;
+            }
+        }
     }
 
     .content-container {
