--- a/src/variables.less
+++ b/src/variables.less
@@ -1,9 +1,11 @@
 @navbar-height: 48px;
 @padding-horizontal-width: 10px;
 @padding-vertical-width: 10px;
+@padding-sidebar-menu-item: 10px;
 
 // colors
 @bg-divider-color: #e6e6e6;
 @bg-widget-color: #f9f9f9;
 @text-nav-link-color: #6b6b6b;
 @text-nav-link-hover-color: #212121;
+@grey: #666;
