--- a/src/app.component.less
+++ b/src/app.component.less
@@ -54,6 +54,10 @@
                 }
             }
         }
+
+        * {
+            user-select: none;
+        }
     }
 
     .content-layer {
