--- a/src/index.less
+++ b/src/index.less
@@ -1,4 +1,4 @@
-@import url('//at.alicdn.com/t/font_3303084_1uhvhfxxr5r.css');
+@import url('//at.alicdn.com/t/font_3303084_bgsxky1vpxv.css');
 
 html {
     height: 100%;
@@ -19,5 +19,46 @@ body {
 
     #root {
         height: 100%;
+    }
+}
+
+* {
+    scrollbar-color: #a6a6a6 transparent;
+    scrollbar-width: thin;
+
+    ::-webkit-scrollbar {
+        height: 12px;
+        width: 12px;
+        overflow: visible;
+        position: absolute;
+    }
+
+    ::-webkit-scrollbar-button {
+        height: 0;
+        width: 0;
+    }
+
+    ::-webkit-scrollbar-corner {
+        background: transparent;
+    }
+
+    ::-webkit-scrollbar-thumb {
+        background-color: #a6a6a6;
+    }
+
+    ::-webkit-scrollbar-thumb, ::-webkit-scrollbar-track {
+        background-clip: padding-box;
+        border: 3px solid transparent;
+        border-radius: 100px;
+    }
+
+    ::-webkit-scrollbar-track {
+        background-color: #ededed;
+    }
+
+    ::-webkit-scrollbar-thumb, ::-webkit-scrollbar-track {
+        background-clip: padding-box;
+        border: 3px solid transparent;
+        border-radius: 100px;
     }
 }
