--- a/src/modules/clients/client-dashboard.component.less
+++ b/src/modules/clients/client-dashboard.component.less
@@ -1,9 +1,10 @@
-@import url('../../variables.less');
+@import url('@/variables.less');
 
 .client-dashboard-container {
-    width: 100%;
+    max-width: 100%;
     height: 100%;
     display: flex;
+    flex-wrap: nowrap;
     align-items: stretch;
 
     .sidebar {
@@ -19,7 +20,6 @@
         padding-right: 0;
         background-color: @bg-widget-color;
         border-right: 1px solid @bg-divider-color;
-        @scrollbar();
 
         .menu-container {
             box-sizing: border-box;
