--- a/src/variables.less
+++ b/src/variables.less
@@ -11,39 +11,13 @@
 @grey: #666;
 
 // mixins
-@scrollbar: {
+@hide-scrollbar: {
     ::-webkit-scrollbar {
-        height: 12px;
-        width: 12px;
-        overflow: visible;
+        -webkit-appearance: none;
     }
 
-    ::-webkit-scrollbar-button {
-        height: 0;
-        width: 0;
-    }
-
-    ::-webkit-scrollbar-corner {
-        background: transparent;
-    }
-
-    ::-webkit-scrollbar-thumb {
-        background-color: #a6a6a6;
-    }
-
-    ::-webkit-scrollbar-thumb, ::-webkit-scrollbar-track {
-        background-clip: padding-box;
-        border: 3px solid transparent;
-        border-radius: 100px;
-    }
-
-    ::-webkit-scrollbar-track {
-        background-color: #ededed;
-    }
-
-    ::-webkit-scrollbar-thumb, ::-webkit-scrollbar-track {
-        background-clip: padding-box;
-        border: 3px solid transparent;
-        border-radius: 100px;
+    &, * {
+        -ms-overflow-style: none;  /* IE and Edge */
+        scrollbar-width: none;
     }
 }
