feat: 🎸 clients dropdown

--- a/src/app.component.less
+++ b/src/app.component.less
@@ -45,7 +45,7 @@
 
             .link {
                 font-size: 14px;
-                color: @text-nav-link-color;
+                color: darken(@text-nav-link-color, 5%);
                 text-decoration: none;
                 background-color: transparent;
 
