--- a/src/index.less
+++ b/src/index.less
@@ -1,4 +1,4 @@
-@import url('//at.alicdn.com/t/font_3303084_bgsxky1vpxv.css');
+@import url('//at.alicdn.com/t/font_3303084_dm6mgoxstsd.css');
 
 html {
     height: 100%;
@@ -20,6 +20,10 @@ body {
     #root {
         height: 100%;
     }
+}
+
+.dropdown-icon {
+    font-size: 13px !important;
 }
 
 * {
