--- a/src/variables.less
+++ b/src/variables.less
@@ -9,6 +9,7 @@
 @text-nav-link-color: #6b6b6b;
 @text-nav-link-hover-color: #212121;
 @grey: #666;
+@text-strong-color: darken(@text-nav-link-color, 10%);
 
 // mixins
 @hide-scrollbar: {
