--- a/src/modules/clients/client-workstation.component.less
+++ b/src/modules/clients/client-workstation.component.less
@@ -7,6 +7,29 @@
         .controls {
             border-bottom: 1px solid @bg-divider-color;
             padding: @padding-vertical-width @padding-horizontal-width;
+            display: flex;
+            align-items: center;
+
+            .client-name {
+                font-weight: 700;
+                color: @text-strong-color;
+            }
+
+            .control-button {
+                padding: 6px;
+                font-size: 6px;
+                line-height: 10px;
+                font-weight: 700;
+
+                .icon {
+                    font-size: 6px;
+                    font-weight: 700;
+                }
+            }
+
+            & > * {
+                margin-right: 10px;
+            }
         }
 
         .tabs {
@@ -26,7 +49,7 @@
             }
 
             .add-button-wrapper {
-                width: 40px;
+                width: 60px;
                 flex-grow: 0;
                 flex-shrink: 1;
                 border-bottom: 1px solid @bg-divider-color;
