feat: 🎸 optimize initial loading component

--- a/src/modules/clients/clients-dropdown.component.less
+++ b/src/modules/clients/clients-dropdown.component.less
@@ -5,6 +5,10 @@
     flex-direction: column;
     align-items: stretch;
 
+    .header-wrapper {
+        padding: 5px 10px;
+    }
+
     .load-more-wrapper {
         box-sizing: border-box;
         padding: 5px;
@@ -14,6 +18,14 @@
                 background-color: transparent;
             }
         }
+    }
+
+    .loading-wrapper {
+        width: 100%;
+        height: 200px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
     .footer-wrapper {
