feat: 🎸 support empty

--- a/src/index.less
+++ b/src/index.less
@@ -37,6 +37,26 @@ body {
     }
 }
 
+.small {
+    padding: 10px;
+    font-size: 12px;
+    line-height: 12px;
+
+    .pugio-icons {
+        font-size: 12px;
+    }
+}
+
+.tiny {
+    padding: 5px 10px;
+    font-size: 10px;
+    line-height: 10px;
+
+    .pugio-icons {
+        font-size: 10px;
+    }
+}
+
 * {
     scrollbar-color: #a6a6a6 transparent;
     scrollbar-width: thin;
