feat: 🎸 optimize styles

--- a/src/index.less
+++ b/src/index.less
@@ -47,6 +47,12 @@ body {
     }
 }
 
+.input {
+    padding: 6px 10px;
+    font-size: 12px;
+    line-height: 12px;
+}
+
 .tiny {
     padding: 5px 10px;
     font-size: 10px;
