--- a/src/modules/clients/client-dashboard.component.less
+++ b/src/modules/clients/client-dashboard.component.less
@@ -53,5 +53,29 @@
     .content-container {
         flex-shrink: 1;
         flex-grow: 1;
+        display: flex;
+        flex-direction: column;
+        align-items: stretch;
+
+        .controls {
+            border-bottom: 1px solid @bg-divider-color;
+            padding: @padding-vertical-width @padding-horizontal-width;
+            display: flex;
+            align-items: center;
+            background-color: @bg-widget-color;
+
+            .client-name {
+                font-weight: 700;
+                color: @text-strong-color;
+            }
+
+            .control-button {
+                font-weight: 700;
+            }
+
+            & > * {
+                margin-right: 10px;
+            }
+        }
     }
 }
