feat: 🎸 support pathname memorizable

--- a/src/modules/clients/client-dashboard.component.less
+++ b/src/modules/clients/client-dashboard.component.less
@@ -67,6 +67,7 @@
             .client-name {
                 font-weight: 700;
                 color: @text-strong-color;
+                user-select: none;
             }
 
             .control-button {
