feat: 🎸 channel container styles

--- a/src/modules/client/client-workstation.component.less
+++ b/src/modules/client/client-workstation.component.less
@@ -20,7 +20,7 @@
                 }
             }
 
-            .add-button-wrapper {
+            .buttons-wrapper {
                 width: 60px;
                 flex-grow: 0;
                 flex-shrink: 1;
