--- a/src/modules/container/container.component.less
+++ b/src/modules/container/container.component.less
@@ -1,4 +1,4 @@
-@import url('./variables.less');
+@import url('@/variables.less');
 
 .app-container {
     box-sizing: border-box;
@@ -6,14 +6,12 @@
     height: 100%;
     background-color: white;
     position: relative;
-    padding-top: @navbar-height;
 
     .navbar {
         display: flex;
         justify-content: space-between;
         align-items: center;
         width: 100%;
-        height: @navbar-height;
         position: absolute;
         top: 0;
         background-color: @bg-widget-color;
