feat: 🎸 optimize loading and error styles

--- a/src/modules/client/client-workstation.component.less
+++ b/src/modules/client/client-workstation.component.less
@@ -31,4 +31,12 @@
             }
         }
     }
+
+    .panel-wrapper {
+        .simplebar-content {
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+        }
+    }
 }
