--- a/src/modules/channel/channel-panel.component.less
+++ b/src/modules/channel/channel-panel.component.less
@@ -1,4 +1,11 @@
 .channel-panel {
     flex-grow: 1;
     flex-shrink: 1;
+
+    &.errored,
+    &.loading-wrapper {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 }
