--- a/src/modules/tab/tab.component.less
+++ b/src/modules/tab/tab.component.less
@@ -13,7 +13,7 @@
     border-right: 1px solid @bg-divider-color;
     height: 45px;
     overflow-y: hidden;
-    width: 150px;
+    min-width: 150px;
 
     &:last-child {
         border-right: 0;
@@ -35,6 +35,10 @@
             background-color: white;
             cursor: default;
         }
+    }
+
+    &.startup {
+        justify-content: center;
     }
 
     &.placeholder {
