--- a/src/modules/client/client-workstation.component.less
+++ b/src/modules/client/client-workstation.component.less
@@ -29,6 +29,15 @@
                 justify-content: center;
                 align-items: center;
             }
+
+            .floating-buttons-wrapper {
+                width: 60px;
+                flex-grow: 1;
+                flex-shrink: 1;
+                display: flex;
+                justify-content: flex-start;
+                align-items: center;
+            }
         }
     }
 
@@ -38,5 +47,11 @@
             display: flex;
             flex-direction: column;
         }
+    }
+
+    .empty-tabs {
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 }
