feat: 🎸 sticky buttons wrapper

--- a/src/modules/client/client-menu-item.component.less
+++ b/src/modules/client/client-menu-item.component.less
@@ -9,6 +9,7 @@
     color: @text-nav-link-color;
     padding: @padding-sidebar-menu-item;
     border-radius: 5px;
+    margin-bottom: calc(@padding-vertical-width / 2);
 
     .title {
         font-size: 10px;
