--- a/src/modules/client/client-workstation.component.less
+++ b/src/modules/client/client-workstation.component.less
@@ -21,22 +21,26 @@
             }
 
             .buttons-wrapper {
-                width: 60px;
                 flex-grow: 0;
                 flex-shrink: 1;
                 border-bottom: 1px solid @bg-divider-color;
                 display: flex;
                 justify-content: center;
                 align-items: center;
+
+                &.floating {
+                    justify-content: flex-start;
+                    padding-left: @padding-horizontal-width;
+                }
+
+                &.placeholder {
+                    flex-grow: 1;
+                    min-width: 0;
+                }
             }
 
-            .floating-buttons-wrapper {
-                width: 60px;
-                flex-grow: 1;
-                flex-shrink: 1;
-                display: flex;
-                justify-content: flex-start;
-                align-items: center;
+            .tabs-cursor {
+                width: 0;
             }
         }
     }
