--- a/src/modules/client/client-workstation.component.less
+++ b/src/modules/client/client-workstation.component.less
@@ -21,9 +21,11 @@
             }
 
             .buttons-wrapper {
+                box-sizing: border-box;
                 flex-grow: 0;
                 flex-shrink: 1;
                 border-bottom: 1px solid @bg-divider-color;
+                border-left: 1px solid @bg-divider-color;
                 display: flex;
                 justify-content: center;
                 align-items: center;
@@ -31,11 +33,14 @@
                 &.floating {
                     justify-content: flex-start;
                     padding-left: @padding-horizontal-width;
+                    border-left: 0;
                 }
 
                 &.placeholder {
                     flex-grow: 1;
                     min-width: 0;
+                    border: 0;
+                    border-bottom: 1px solid @bg-divider-color;
                 }
             }
 
@@ -51,9 +56,19 @@
             display: flex;
             flex-direction: column;
         }
+
+        .channel-not-selected {
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
     }
 
     .empty-tabs {
+        width: 100%;
+        height: 100%;
         display: flex;
         justify-content: center;
         align-items: center;
