--- a/src/modules/tab/tab.component.less
+++ b/src/modules/tab/tab.component.less
@@ -5,7 +5,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    flex-shrink: 1;
+    flex-shrink: 0;
     flex-grow: 0;
     user-select: none;
     padding: @padding-vertical-width @padding-horizontal-width;
@@ -15,7 +15,8 @@
     overflow-y: hidden;
     min-width: 150px;
 
-    &:last-child {
+    &:last-child,
+    &:nth-last-child(2) {
         border-right: 0;
     }
 
@@ -57,7 +58,7 @@
         }
 
         .text {
-            max-width: 120px;
+            width: 120px;
             font-size: 12px;
             color: @text-nav-link-color;
         }
