fix: 🐛 stick state delay

--- a/src/modules/tab/tab.component.less
+++ b/src/modules/tab/tab.component.less
@@ -15,8 +15,7 @@
     overflow-y: hidden;
     min-width: 150px;
 
-    &:last-child,
-    &:nth-last-child(2) {
+    &:last-child {
         border-right: 0;
     }
 
