--- a/src/modules/brand/exception.component.less
+++ b/src/modules/brand/exception.component.less
@@ -8,6 +8,10 @@
     justify-content: center;
     align-items: center;
 
+    &, * {
+        user-select: none;
+    }
+
     img {
         height: 81px;
     }
