--- a/src/modules/client/client-workstation.component.less
+++ b/src/modules/client/client-workstation.component.less
@@ -72,5 +72,22 @@
         display: flex;
         justify-content: center;
         align-items: center;
+
+        .exception.welcome {
+            img {
+                width: 120px;
+                height: 120px;
+            }
+
+            .title {
+                margin-top: 50px;
+                font-size: 18px;
+            }
+
+            .subtitle {
+                margin-top: 15px;
+                margin-bottom: 50px;
+            }
+        }
     }
 }
