--- a/src/modules/client/channel-list.component.less
+++ b/src/modules/client/channel-list.component.less
@@ -42,5 +42,19 @@
         flex-grow: 1;
         flex-shrink: 1;
         width: 100%;
+
+        .simplebar-content {
+            height: 100%;
+            flex-grow: 1;
+            display: flex;
+            flex-direction: column;
+        }
+    }
+
+    .loading-wrapper {
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 }
