--- a/src/modules/client/channel-list.component.less
+++ b/src/modules/client/channel-list.component.less
@@ -45,9 +45,26 @@
 
         .simplebar-content {
             height: 100%;
+            max-width: 100%;
             flex-grow: 1;
             display: flex;
             flex-direction: column;
+            align-items: center;
+        }
+
+        .channels-list-wrapper {
+            flex-grow: 1;
+            flex-shrink: 0;
+            width: 100%;
+
+            .test {
+                height: 120px;
+                flex-grow: 0;
+                flex-shrink: 1;
+                background-color: red;
+                border: 1px solid black;
+                display: inline-block;
+            }
         }
     }
 
