feat: 🎸 select channel list item

--- a/src/index.less
+++ b/src/index.less
@@ -105,3 +105,9 @@ body {
         border-radius: 100px;
     }
 }
+
+.load-more-button {
+    &:not(:hover), &:not(:active) {
+        background-color: transparent;
+    }
+}
