feat: 🎸 channel theme provider

--- a/src/modules/channel/channel-panel.component.less
+++ b/src/modules/channel/channel-panel.component.less
@@ -8,4 +8,9 @@
         justify-content: center;
         align-items: center;
     }
+
+    .ka-wrapper,
+    .ka-content {
+        height: 100%;
+    }
 }
