--- a/src/builtin/web-terminal/app.component.less
+++ b/src/builtin/web-terminal/app.component.less
@@ -3,9 +3,27 @@
 
 .container {
     height: 100%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: stretch;
+
+    &.loading {
+        position: relative;
+    }
+
+    .loading-wrapper {
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        background-color: rgba(255, 255, 255, .3);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 9;
+    }
 
     .controls-wrapper {
         padding: 0 @padding-horizontal-width;
