--- a/src/builtin/web-terminal/app.component.less
+++ b/src/builtin/web-terminal/app.component.less
@@ -8,6 +8,22 @@
     flex-direction: column;
     align-items: stretch;
 
+    &, * {
+        box-sizing: border-box;
+    }
+
+    .xterm-viewport {
+        width: initial !important;
+    }
+
+    .terminal.xterm {
+        height: 100%;
+    }
+
+    .xterm-viewport {
+        height: 100% !important;
+    }
+
     &.loading {
         position: relative;
     }
