fix: 🐛 ui styles

--- a/src/modules/client/channel-list.component.less
+++ b/src/modules/client/channel-list.component.less
@@ -106,6 +106,10 @@
         justify-content: center;
         align-items: center;
 
+        img {
+            pointer-events: none;
+        }
+
         .text {
             color: darken(@text-nav-link-color, 20%);
             margin-top: 10px;
