--- a/src/modules/container/container.component.less
+++ b/src/modules/container/container.component.less
@@ -21,6 +21,7 @@
             width: 36px;
             height: 36px;
             border-radius: 6px;
+            pointer-events: none;
         }
 
         .wrapper {
