--- a/src/modules/client/client-dashboard.component.less
+++ b/src/modules/client/client-dashboard.component.less
@@ -68,6 +68,7 @@
                 font-weight: 700;
                 color: @text-strong-color;
                 user-select: none;
+                max-width: 120px;
             }
 
             .control-button {
