fix: 🐛 terminal socket connection clean

--- a/src/modules/tab/tab.component.less
+++ b/src/modules/tab/tab.component.less
@@ -54,6 +54,7 @@
             width: 15px;
             height: 15px;
             margin-right: 5px;
+            pointer-events: none;
         }
 
         .text {
