--- a/src/index.less
+++ b/src/index.less
@@ -111,3 +111,13 @@ body {
         background-color: transparent;
     }
 }
+
+.single-column {
+    min-width: 420px;
+    max-width: 768px;
+}
+
+.page {
+    width: 100%;
+    height: 100%;
+}
