--- a/src/modules/channel/channel-list.component.less
+++ b/src/modules/channel/channel-list.component.less
@@ -74,7 +74,7 @@
     }
 
     .loading-wrapper {
-        height: 100%;
+        height: 300px;
         display: flex;
         justify-content: center;
         align-items: center;
