--- a/src/modules/channel/channel-list.component.less
+++ b/src/modules/channel/channel-list.component.less
@@ -27,13 +27,21 @@
         .search-wrapper {
             display: flex;
             align-items: stretch;
+            justify-content: space-between;
+            width: 100%;
 
-            & > * {
-                margin-right: @padding-horizontal-width;
-            }
+            .left-wrapper {
+                width: 100%;
+                display: flex;
+                align-items: stretch;
 
-            .search {
-                width: 200px;
+                & > * {
+                    margin-right: @padding-horizontal-width;
+                }
+
+                .search {
+                    width: 200px;
+                }
             }
         }
     }
@@ -52,22 +60,40 @@
             align-items: center;
         }
 
-        .channels-list-wrapper {
-            flex-shrink: 0;
+        .channel-list-group-wrapper {
             width: 100%;
 
-            .load-more-wrapper {
+            .switch-wrapper {
+                box-sizing: border-box;
+                display: flex;
+                justify-content: flex-start;
+                align-items: center;
                 padding: @padding-vertical-width @padding-horizontal-width;
-                width: 100%;
-                display: block;
-                user-select: none;
 
-                & > div {
+                & > .title {
+                    user-select: none;
+                    color: @text-nav-link-hover-color;
+                    margin-left: @padding-horizontal-width;;
+                }
+            }
+
+            .channels-list-wrapper {
+                flex-shrink: 0;
+                width: 100%;
+
+                .load-more-wrapper {
+                    padding: @padding-vertical-width @padding-horizontal-width;
                     width: 100%;
-                    height: 100;
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
+                    display: block;
+                    user-select: none;
+
+                    & > div {
+                        width: 100%;
+                        height: 100;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                    }
                 }
             }
         }
