fix: 🐛 load more button styles

--- a/src/index.less
+++ b/src/index.less
@@ -107,7 +107,7 @@ body {
 }
 
 .load-more-button {
-    &:not(:hover), &:not(:active) {
+    &:not(:hover):not(:active) {
         background-color: transparent;
     }
 }
