feat: 🎸 clients selector and create button

--- a/src/modules/clients/clients-dropdown.component.less
+++ b/src/modules/clients/clients-dropdown.component.less
@@ -49,3 +49,15 @@
         }
     }
 }
+
+.link {
+    .icon-server {
+        font-weight: 700;
+    }
+
+    .text {
+        &.selected {
+            font-weight: 700;
+        }
+    }
+}
