--- a/src/modules/tab/tab.component.less
+++ b/src/modules/tab/tab.component.less
@@ -28,6 +28,7 @@
     }
 
     &.active {
+        border-top: 1px solid @bg-divider-color;
         border-bottom: 0;
         background-color: white;
 
