--- a/src/index.less
+++ b/src/index.less
@@ -113,11 +113,15 @@ body {
 }
 
 .single-column {
-    min-width: 420px;
-    max-width: 768px;
+    min-width: 640px;
+    max-width: 1024px;
 }
 
 .page {
     width: 100%;
     height: 100%;
+}
+
+.list-item-extra-text {
+    margin-left: @padding-horizontal-width;
 }
