feat: 🎸 optimize user card

--- a/src/modules/client/client-members.component.less
+++ b/src/modules/client/client-members.component.less
@@ -25,6 +25,10 @@
                     margin-right: 0;
                 }
             }
+
+            .search {
+                width: 240px;
+            }
         }
     }
 
@@ -46,7 +50,6 @@
             justify-content: flex-start;
             align-items: stretch;
             box-sizing: border-box;
-            padding: 0 calc(@padding-horizontal-width * 5);
 
             &.loading-wrapper {
                 justify-content: center;
