--- a/src/variables.less
+++ b/src/variables.less
@@ -10,7 +10,7 @@
 @text-nav-link-hover-color: #212121;
 @grey: #666;
 @text-strong-color: darken(@text-nav-link-color, 10%);
-@text-link-color: #0265d2;
+@text-link-color: #4b768b;
 
 // mixins
 @hide-scrollbar: {
