--- a/src/modules/client/client-members.component.less
+++ b/src/modules/client/client-members.component.less
@@ -46,14 +46,18 @@
             width: 100%;
             height: 100%;
             display: flex;
-            flex-direction: column;
-            justify-content: flex-start;
-            align-items: stretch;
             box-sizing: border-box;
 
             &.loading-wrapper {
                 justify-content: center;
                 align-items: center;
+            }
+
+            .simplebar-content {
+                display: flex;
+                flex-direction: column;
+                justify-content: flex-start;
+                align-items: stretch;
             }
         }
 
