feat: 🎸 user selector optimize

--- a/src/modules/client/client-members.component.less
+++ b/src/modules/client/client-members.component.less
@@ -14,6 +14,7 @@
         padding: @padding-vertical-width @padding-horizontal-width;
         display: flex;
         justify-content: space-between;
+        background-color: @bg-widget-color;
 
         .header-controls-wrapper {
             display: flex;
@@ -28,6 +29,7 @@
 
             .search {
                 width: 240px;
+                background-color: white;
             }
         }
     }
