--- a/src/modules/user/user-card.component.less
+++ b/src/modules/user/user-card.component.less
@@ -43,6 +43,11 @@
         .title, .subtitle {
             max-width: 480px;
         }
+
+        .title {
+            padding-right: 0;
+            padding-left: 0;
+        }
     }
 
     .controls-button-wrapper {
