--- a/src/modules/client/client-menu-item.component.less
+++ b/src/modules/client/client-menu-item.component.less
@@ -8,6 +8,7 @@
     text-decoration: none;
     color: @text-nav-link-color;
     padding: @padding-sidebar-menu-item;
+    min-width: 80px;
 
     .title {
         font-size: 10px;
