--- a/src/modules/client/client-workstation.component.less
+++ b/src/modules/client/client-workstation.component.less
@@ -1,6 +1,8 @@
 @import url('@/variables.less');
 
 .client-workstation-page {
+    position: relative;
+
     &.offline {
         height: 100%;
         display: flex;
