fix: 🐛 style issues

--- a/src/modules/client/client-workstation.component.less
+++ b/src/modules/client/client-workstation.component.less
@@ -12,6 +12,7 @@
 
     .header-container {
         background-color: @bg-widget-color;
+        border-top: 1px solid @bg-divider-color;
 
         .tabs {
             display: flex;
