--- a/src/index.less
+++ b/src/index.less
@@ -1,4 +1,4 @@
-@import url('//at.alicdn.com/t/font_3303084_t4qz9qfv349.css');
+@import url('/icons/style.css');
 
 html {
     height: 100%;
@@ -35,6 +35,10 @@ body {
     &:hover, &:active {
         background-color: transparent;
     }
+}
+
+.pugio-icons {
+    font-size: 16px;
 }
 
 .small {
