--- a/src/index.less
+++ b/src/index.less
@@ -47,11 +47,11 @@ body {
     }
 }
 
-// .input {
-//     padding: 6px 10px;
-//     font-size: 12px;
-//     line-height: 12px;
-// }
+.input {
+    padding: 6px 10px;
+    font-size: 12px;
+    line-height: 12px;
+}
 
 .monospace {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
